# snek

./: .gitignore  Cargo.toml
examples/: borrowed.rs  owned.rs  repl.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: interpreter.rs  parser.rs
src/: builtin.rs  context.rs  error.rs  interpreter.rs  lib.rs  main.rs  parser.rs  test_utils.rs
test_outputs/: 21.json  29.json
