[package]
name = "snek-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
itertools = "0.13.0"
libfuzzer-sys = { version =  "0.4", features = ["arbitrary-derive"] }

[dependencies.snek]
path = ".."

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "interpreter"
path = "fuzz_targets/interpreter.rs"
test = false
doc = false
bench = false
